Small text change and a spacing improvement to some UI text. Disabled default wait dialog for ConnectActivity when downloading fragment is displayed. Disabled back button when downloading fragment is displayed. Only calling jobs complete when end date has past (allowing more than maxVisits).

--- a/app/res/layout/fragment_connect_job_intro.xml
+++ b/app/res/layout/fragment_connect_job_intro.xml
@@ -51,6 +51,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:textAlignment="center"
         android:text="@string/connect_job_you_will_learn"
         android:textStyle="bold" />
 
