Fixed several navigation bugs. Downloading fragment can navigate to progress pages or directly to app. Improved back button disabling during app download.

--- a/app/res/navigation/nav_graph_connect.xml
+++ b/app/res/navigation/nav_graph_connect.xml
@@ -113,6 +113,9 @@
             android:name="learning"
             app:argType="boolean" />
         <argument
+            android:name="goToApp"
+            app:argType="boolean" />
+        <argument
             android:name="job"
             app:argType="org.commcare.android.database.connect.models.ConnectJobRecord" />
         <action
