--- a/app/res/layout/fragment_connect_learning_progress.xml
+++ b/app/res/layout/fragment_connect_learning_progress.xml
@@ -1,194 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/connect_learning_refresh"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/ic_update_nav_drawer"
-        android:contentDescription="@string/refresh" />
-
-    <TextView
-        android:id="@+id/connect_learning_last_update"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="3dp"
-        app:layout_constraintEnd_toStartOf="@id/connect_learning_refresh" />
-
     <LinearLayout
-        android:id="@+id/connect_learning_title_row"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_learning_refresh"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/connect_learn_progress_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/book"/>
-
-        <TextView
-            android:id="@+id/connect_learn_progress_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:paddingTop="2dp"
-            android:paddingStart="10dp"
-            android:textStyle="bold"
-            android:textSize="@dimen/text_large" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/connect_learning_status_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_learning_title_row"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:textAlignment="center"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/connect_learning_central_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_learning_status_text">
+        android:orientation="vertical">
 
-        <ProgressBar
-            android:id="@+id/connect_learning_progress_bar"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:indeterminateOnly="false"
-            android:progressDrawable="@drawable/progress_ring"
-            android:rotation="-90"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/connect_learn_progress_bar_text_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/connect_learning_progress_bar"
-            app:layout_constraintBottom_toBottomOf="@id/connect_learning_progress_bar"
-            app:layout_constraintStart_toStartOf="@id/connect_learning_progress_bar"
-            app:layout_constraintEnd_toEndOf="@id/connect_learning_progress_bar"
-            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/connect_learning_refresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:src="@drawable/ic_update_nav_drawer"
+                android:contentDescription="@string/refresh" />
 
             <TextView
-                android:id="@+id/connect_learning_progress_text"
-                android:layout_width="match_parent"
+                android:id="@+id/connect_learning_last_update"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="@dimen/text_larger"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/connect_learn_complete"/>
-        </LinearLayout>
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="3dp"
+                app:layout_constraintEnd_toStartOf="@id/connect_learning_refresh" />
 
-        <TextView
-            android:id="@+id/connect_learning_complete_by_text"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_width="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/connect_learning_progress_bar"
-            tools:text="Complete By" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
-            android:id="@+id/connect_learning_certificate_container"
+            android:id="@+id/connect_learning_title_row"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:orientation="vertical"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:background="@drawable/dots_rect_back"
+            android:gravity="center"
             android:layout_marginTop="20dp"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
-            android:visibility="gone"
-            >
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/connect_learn_progress_icon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/book"/>
 
             <TextView
-                android:id="@+id/connect_learn_cert_title"
-                android:layout_width="match_parent"
+                android:id="@+id/connect_learn_progress_title"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@color/solid_blue"
-                android:text="@string/connect_learn_certificate"
-                />
-
-            <TextView
-                android:id="@+id/connect_learn_cert_subject"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textAlignment="center"
-                />
-
-            <TextView
-                android:id="@+id/connect_learn_cert_person"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textAlignment="center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:paddingTop="2dp"
+                android:paddingStart="10dp"
                 android:textStyle="bold"
-                />
+                android:textSize="@dimen/text_large" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/connect_learning_status_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:textAlignment="center"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/connect_learning_central_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ProgressBar
+                android:id="@+id/connect_learning_progress_bar"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:indeterminateOnly="false"
+                android:progressDrawable="@drawable/progress_ring"
+                android:rotation="-90"/>
+
+            <LinearLayout
+                android:id="@+id/connect_learn_progress_bar_text_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/connect_learning_progress_bar"
+                app:layout_constraintBottom_toBottomOf="@id/connect_learning_progress_bar"
+                app:layout_constraintStart_toStartOf="@id/connect_learning_progress_bar"
+                app:layout_constraintEnd_toEndOf="@id/connect_learning_progress_bar"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/connect_learning_progress_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/text_larger"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/connect_learn_complete"/>
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/connect_learn_cert_date"
+                android:id="@+id/connect_learning_complete_by_text"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_width="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/connect_learning_progress_bar"
+                tools:text="Complete By" />
+
+            <LinearLayout
+                android:id="@+id/connect_learning_certificate_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:orientation="vertical"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/dots_rect_back"
                 android:layout_marginTop="20dp"
-                android:textAlignment="center"
-                />
-        </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                android:visibility="gone"
+                >
 
-    <TextView
-        android:id="@+id/connect_learning_claim_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_learning_central_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="8dp"
-        tools:text="@string/connect_learn_claim_label"
-        android:textSize="@dimen/text_large"/>
+                <TextView
+                    android:id="@+id/connect_learn_cert_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textColor="@color/solid_blue"
+                    android:text="@string/connect_learn_certificate"
+                    />
 
-    <Button
-        android:id="@+id/connect_learning_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_learning_claim_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="8dp"
-        tools:text="Button" />
+                <TextView
+                    android:id="@+id/connect_learn_cert_subject"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:textAlignment="center"
+                    />
 
+                <TextView
+                    android:id="@+id/connect_learn_cert_person"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/connect_learn_cert_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:textAlignment="center"
+                    />
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/connect_learning_claim_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_margin="8dp"
+            tools:text="@string/connect_learn_claim_label"
+            android:textSize="@dimen/text_large"/>
+
+        <Button
+            android:id="@+id/connect_learning_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            tools:text="Button" />
+
+    </LinearLayout>
+</ScrollView>
