--- a/app/res/layout/fragment_connect_delivery_details.xml
+++ b/app/res/layout/fragment_connect_delivery_details.xml
@@ -1,155 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/connect_delivery_details_container"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:paddingBottom="20dp"
-        android:background="@drawable/dots_rect_back">
+        android:orientation="vertical">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/connect_delivery_details_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:paddingBottom="20dp"
+            android:background="@drawable/dots_rect_back">
+
+            <TextView
+                android:id="@+id/connect_delivery_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:paddingTop="10dp"
+                android:textStyle="bold"
+                android:textSize="@dimen/text_large"
+                android:text="@string/connect_delivery_review_title"
+                />
+
+            <ImageView
+                android:id="@+id/connect_delivery_visits_icon"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                app:layout_constraintTop_toBottomOf="@id/connect_delivery_title"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:src="@drawable/checklist"
+                />
+
+            <TextView
+                android:id="@+id/connect_delivery_total_visits_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/connect_delivery_visits_icon"
+                app:layout_constraintBottom_toBottomOf="@id/connect_delivery_visits_icon"
+                app:layout_constraintStart_toEndOf="@id/connect_delivery_visits_icon"
+                android:layout_marginStart="20dp"
+                android:gravity="center"
+                />
+
+            <ImageView
+                android:id="@+id/connect_delivery_remaining_icon"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                app:layout_constraintTop_toBottomOf="@id/connect_delivery_visits_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:src="@drawable/watch"
+                />
+
+            <TextView
+                android:id="@+id/connect_delivery_remaining_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/connect_delivery_remaining_icon"
+                app:layout_constraintBottom_toBottomOf="@id/connect_delivery_remaining_icon"
+                app:layout_constraintStart_toEndOf="@id/connect_delivery_remaining_icon"
+                android:layout_marginStart="20dp"
+                />
+
+            <ImageView
+                android:id="@+id/connect_delivery_max_daily_icon"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                app:layout_constraintTop_toBottomOf="@id/connect_delivery_remaining_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:src="@drawable/calendar_heart"
+                />
+
+            <TextView
+                android:id="@+id/connect_delivery_max_daily_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/connect_delivery_max_daily_icon"
+                app:layout_constraintBottom_toBottomOf="@id/connect_delivery_max_daily_icon"
+                app:layout_constraintStart_toEndOf="@id/connect_delivery_max_daily_icon"
+                android:layout_marginStart="20dp"
+                />
+
+            <ImageView
+                android:id="@+id/connect_delivery_budget_icon"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                app:layout_constraintTop_toBottomOf="@id/connect_delivery_max_daily_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:src="@drawable/money2"
+                />
+
+            <TextView
+                android:id="@+id/connect_delivery_budget_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/connect_delivery_budget_icon"
+                app:layout_constraintBottom_toBottomOf="@id/connect_delivery_budget_icon"
+                app:layout_constraintStart_toEndOf="@id/connect_delivery_budget_icon"
+                android:layout_marginStart="20dp"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/connect_delivery_title"
-            android:layout_width="wrap_content"
+            android:id="@+id/connect_delivery_action_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:paddingTop="10dp"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
             android:textStyle="bold"
-            android:textSize="@dimen/text_large"
-            android:text="@string/connect_delivery_review_title"
-            />
-
-        <ImageView
-            android:id="@+id/connect_delivery_visits_icon"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:layout_constraintTop_toBottomOf="@id/connect_delivery_title"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/checklist"
-            />
+            android:text="@string/connect_delivery_ready_to_claim"/>
 
         <TextView
-            android:id="@+id/connect_delivery_total_visits_text"
-            android:layout_width="wrap_content"
+            android:id="@+id/connect_delivery_action_details"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/connect_delivery_visits_icon"
-            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_visits_icon"
-            app:layout_constraintStart_toEndOf="@id/connect_delivery_visits_icon"
-            android:layout_marginStart="20dp"
-            android:gravity="center"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:textAlignment="center"
             />
 
-        <ImageView
-            android:id="@+id/connect_delivery_remaining_icon"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:layout_constraintTop_toBottomOf="@id/connect_delivery_visits_icon"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/watch"
-            />
-
-        <TextView
-            android:id="@+id/connect_delivery_remaining_text"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/connect_delivery_button"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/connect_delivery_remaining_icon"
-            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_remaining_icon"
-            app:layout_constraintStart_toEndOf="@id/connect_delivery_remaining_icon"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
-            />
+            android:layout_marginEnd="20dp"
+            android:text="@string/connect_delivery_claim" />
 
-        <ImageView
-            android:id="@+id/connect_delivery_max_daily_icon"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:layout_constraintTop_toBottomOf="@id/connect_delivery_remaining_icon"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/calendar_heart"
-            />
-
-        <TextView
-            android:id="@+id/connect_delivery_max_daily_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/connect_delivery_max_daily_icon"
-            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_max_daily_icon"
-            app:layout_constraintStart_toEndOf="@id/connect_delivery_max_daily_icon"
-            android:layout_marginStart="20dp"
-            />
-
-        <ImageView
-            android:id="@+id/connect_delivery_budget_icon"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:layout_constraintTop_toBottomOf="@id/connect_delivery_max_daily_icon"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/money2"
-            />
-
-        <TextView
-            android:id="@+id/connect_delivery_budget_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/connect_delivery_budget_icon"
-            app:layout_constraintBottom_toBottomOf="@id/connect_delivery_budget_icon"
-            app:layout_constraintStart_toEndOf="@id/connect_delivery_budget_icon"
-            android:layout_marginStart="20dp"
-            />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:id="@+id/connect_delivery_action_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_delivery_details_container"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"
-        android:text="@string/connect_delivery_ready_to_claim"/>
-
-    <TextView
-        android:id="@+id/connect_delivery_action_details"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_delivery_action_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        android:textAlignment="center"
-        />
-
-    <Button
-        android:id="@+id/connect_delivery_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_delivery_action_details"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:text="@string/connect_delivery_claim" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+</ScrollView>
