--- a/app/res/layout/fragment_connect_progress_delivery.xml
+++ b/app/res/layout/fragment_connect_progress_delivery.xml
@@ -1,99 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:id="@+id/connect_progress_title_row"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/connect_progress_progress_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/phone_heart"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:paddingTop="2dp"
-            android:text="@string/connect_progress_title"
-            android:textStyle="bold"
-            android:textSize="@dimen/text_large" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/connect_progress_status_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_progress_title_row"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textAlignment="center"/>
-
-    <ProgressBar
-        android:id="@+id/connect_progress_progress_bar"
-        android:layout_width="240dp"
-        android:layout_height="240dp"
-        app:layout_constraintTop_toBottomOf="@id/connect_progress_status_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
-        android:indeterminateOnly="false"
-        android:progressDrawable="@drawable/progress_ring"
-        android:rotation="-90"/>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/connect_progress_progress_bar"
-        app:layout_constraintBottom_toBottomOf="@id/connect_progress_progress_bar"
-        app:layout_constraintStart_toStartOf="@id/connect_progress_progress_bar"
-        app:layout_constraintEnd_toEndOf="@id/connect_progress_progress_bar"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:id="@+id/connect_progress_title_row"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/connect_progress_progress_icon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/phone_heart"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:paddingTop="2dp"
+                android:text="@string/connect_progress_title"
+                android:textStyle="bold"
+                android:textSize="@dimen/text_large" />
+
+        </LinearLayout>
+
         <TextView
-            android:id="@+id/connect_progress_progress_text"
+            android:id="@+id/connect_progress_status_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ProgressBar
+                android:id="@+id/connect_progress_progress_bar"
+                android:layout_width="240dp"
+                android:layout_height="240dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="20dp"
+                android:indeterminateOnly="false"
+                android:progressDrawable="@drawable/progress_ring"
+                android:rotation="-90"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/connect_progress_progress_bar"
+                app:layout_constraintBottom_toBottomOf="@id/connect_progress_progress_bar"
+                app:layout_constraintStart_toStartOf="@id/connect_progress_progress_bar"
+                app:layout_constraintEnd_toEndOf="@id/connect_progress_progress_bar"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/connect_progress_progress_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/text_larger"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/connect_learn_complete"/>
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/connect_progress_complete_by_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:textSize="@dimen/text_larger"/>
-        <TextView
+            android:layout_marginTop="20dp"/>
+
+        <Button
+            android:id="@+id/connect_progress_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/connect_learn_complete"/>
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:text="@string/connect_progress_launch" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/connect_progress_complete_by_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_progress_progress_bar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"/>
-
-    <Button
-        android:id="@+id/connect_progress_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_progress_complete_by_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:text="@string/connect_progress_launch"
-        />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
