--- a/app/res/layout/fragment_connect_learning_progress.xml
+++ b/app/res/layout/fragment_connect_learning_progress.xml
@@ -16,11 +16,11 @@
 
             <ImageView
                 android:id="@+id/connect_learning_refresh"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:src="@drawable/ic_update_nav_drawer"
+                android:src="@drawable/cloud_backup"
                 android:contentDescription="@string/refresh" />
 
             <TextView
