--- a/app/res/layout/fragment_connect_progress_delivery.xml
+++ b/app/res/layout/fragment_connect_progress_delivery.xml
@@ -79,6 +79,22 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
+            android:id="@+id/connect_progress_warning_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
+            android:text="@string/connect_progress_warning"/>
+
+        <TextView
+            android:id="@+id/connect_progress_warning_learn_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/blue"
+            android:text="@string/connect_progress_warning_learn"/>
+
+        <TextView
             android:id="@+id/connect_progress_complete_by_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
