--- a/app/res/values/attrs.xml
+++ b/app/res/values/attrs.xml
@@ -56,5 +56,6 @@
     <declare-styleable name="FaceCaptureView">
         <attr name="background_color" format="color" />
         <attr name="face_capture_area_delimiter_color" format="color" />
+        <attr name="face_delimiter_color" format="color" />
     </declare-styleable>
 </resources>
