--- a/app/res/values/attrs.xml
+++ b/app/res/values/attrs.xml
@@ -57,5 +57,6 @@
         <attr name="background_color" format="color" />
         <attr name="face_capture_area_delimiter_color" format="color" />
         <attr name="face_marker_color" format="color" />
+        <attr name="countdown_text_size" format="dimension" />
     </declare-styleable>
 </resources>
