--- a/app/res/layout/fragment_connect_progress_delivery.xml
+++ b/app/res/layout/fragment_connect_progress_delivery.xml
@@ -102,6 +102,15 @@
             android:layout_marginTop="20dp"/>
 
         <Button
+            android:id="@+id/connect_progress_review_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:text="@string/connect_progress_review" />
+
+        <Button
             android:id="@+id/connect_progress_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
