Added new section at end of My Jobs tab to show jobs that have ended. Now moving ended jobs to the new section. Ended jobs can still be entered (to view last progress, verifications, payments, etc). Added warning label to learning progress and delivery progress pages when job has ended.

--- a/app/res/layout/fragment_connect_progress_delivery.xml
+++ b/app/res/layout/fragment_connect_progress_delivery.xml
@@ -101,6 +101,16 @@
             android:textAlignment="center"
             android:layout_marginTop="20dp"/>
 
+        <TextView
+            android:id="@+id/connect_progress_ended_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/red"
+            android:text="@string/connect_progress_warning_ended"
+            android:visibility="gone"/>
+
         <Button
             android:id="@+id/connect_progress_review_button"
             android:layout_width="match_parent"
