--- a/app/res/layout/fragment_connect_learning_progress.xml
+++ b/app/res/layout/fragment_connect_learning_progress.xml
@@ -175,7 +175,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/connect_progress_warning_text"
+            android:id="@+id/connect_learning_warning_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
@@ -183,7 +183,7 @@
             android:text="@string/connect_progress_warning"/>
 
         <TextView
-            android:id="@+id/connect_progress_warning_learn_text"
+            android:id="@+id/connect_learning_warning_learn_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
@@ -198,6 +198,16 @@
             android:layout_marginTop="20dp"
             tools:text="@string/connect_learn_claim_label"
             android:textSize="@dimen/text_large"/>
+
+        <TextView
+            android:id="@+id/connect_learning_ended_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/red"
+            android:text="@string/connect_learn_warning_ended"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/connect_learning_review_button"
