Add button for manual capture

--- a/app/res/layout/micro_image_widget.xml
+++ b/app/res/layout/micro_image_widget.xml
@@ -26,5 +26,14 @@
             app:face_marker_color="@color/cc_attention_positive_color"
             app:countdown_text_size="@dimen/font_size_large"
             android:layout_weight="1"/>
+
+        <ImageView
+            android:id="@+id/camera_shutter_button"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:src="@drawable/camera_shutter"
+            android:background="@color/cc_neutral_bg_tr"
+            android:visibility="gone"
+            android:paddingBottom="15dp"/>
     </LinearLayout>
 </FrameLayout>
