--- a/app/res/layout/screen_connect_primary_phone.xml
+++ b/app/res/layout/screen_connect_primary_phone.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/cc_core_bg"
     android:orientation="vertical"
     android:layout_marginStart="@dimen/content_start"
@@ -35,14 +34,17 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8sp"
             android:text="@string/phone_code_plus" />
-        <com.hbb20.CountryCodePicker
-            android:id="@+id/connect_primary_phone_country_picker"
-            android:layout_width="wrap_content"
+        <AutoCompleteTextView
+            android:id="@+id/connect_primary_phone_country_input"
+            android:layout_width="100sp"
             android:layout_height="wrap_content"
-            app:ccp_autoDetectCountry="true" />
+            android:inputType="numberDecimal"
+            android:digits="1234567890"
+            android:gravity="center" />
+
         <AutoCompleteTextView
             android:id="@+id/connect_primary_phone_input"
-            android:layout_toEndOf="@id/connect_primary_phone_country_picker"
+            android:layout_toEndOf="@id/connect_primary_phone_country_input"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
