--- a/app/res/layout/connect_payment_item.xml
+++ b/app/res/layout/connect_payment_item.xml
@@ -18,7 +18,7 @@
         />
 
     <TextView
-        android:id="@+id/date"
+        android:id="@+id/confirm"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
         />
 
     <TextView
-        android:id="@+id/status"
+        android:id="@+id/date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/name"
         android:layout_width="wrap_content"
