--- a/app/res/layout/connect_claimed_job_item.xml
+++ b/app/res/layout/connect_claimed_job_item.xml
@@ -5,15 +5,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:id="@+id/button"
+        android:id="@+id/button_go"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:src="@drawable/arrow_right" />
+
+    <ImageView
+        android:id="@+id/button_info"
+        app:layout_constraintEnd_toStartOf="@id/button_go"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="5dp"
+        android:src="@drawable/icon_info_fill_lightcool" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -48,13 +58,13 @@
         android:textAlignment="textStart"
         app:layout_constrainedWidth="true"
         app:layout_constraintStart_toEndOf="@id/progress_bar"
-        app:layout_constraintEnd_toStartOf="@id/button"
+        app:layout_constraintEnd_toStartOf="@id/button_info"
         app:layout_constraintTop_toTopOf="@id/progress_bar" />
 
     <TextView
         android:id="@+id/description_label"
         app:layout_constraintStart_toStartOf="@id/title_label"
-        app:layout_constraintEnd_toStartOf="@id/button"
+        app:layout_constraintEnd_toStartOf="@id/button_info"
         app:layout_constraintTop_toBottomOf="@id/title_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -64,7 +74,7 @@
     <TextView
         android:id="@+id/remaining_label"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/button"
+        app:layout_constraintEnd_toStartOf="@id/button_info"
         app:layout_constraintTop_toBottomOf="@id/description_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
